--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-    "name": "employees",
-    "version": "1.0.0",
-    "description": "",
-    "main": "employeeTracker.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "inquirer": "^7.3.3",
-      "mysql": "^2.18.1"
-    }
+  "name": "employeetracker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/umar1425/employeetracker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/umar1425/employeetracker/issues"
+  },
+  "homepage": "https://github.com/umar1425/employeetracker#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^7.3.3",
+    "mysql": "^2.18.1"
   }
+}
